finish reward plotting

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-__pycache__/
 *.npy
-*png
-.vscode/
-.flake8
-.trunk/
-*txt
-.isort.cfg
+*.png
+*.pdf
+*.pgf
+*.txt
+*.cfg
+*.log
 .markdownlint*
+.flake8
+
+__pycache__/
+experiments/
+.vscode/
+.trunk/
+
